gfx/layers/ipc/ContentCompositorBridgeParent.h
@@ -84,6 +84,8 @@ class ContentCompositorBridgeParent final : public CompositorBridgeParentBase {
     return IPC_OK();
   }
 
+  mozilla::ipc::IPCResult RecvNotifyMemoryPressure() override;
+
   mozilla::ipc::IPCResult RecvCheckContentOnlyTDR(
       const uint32_t& sequenceNum, bool* isContentOnlyTDR) override;
 
